    Benutzername: [[ACCESS_USER_USERNAME]]
    ID des Benutzers: [[ACCESS_USER_ID]]
- Hochgeladene Dateien werden bei einer Kontaktanfrage im Benachrichtigungs-
  E-Mail als Dateianhänge angefügt.
- Einige vorgenerierte <br />-Tags, welche sich für Webdesigner als eher störend erwiesen, wurden entfernt.
- Heraufgeladene Dateien werden nun auch unter UTF-8 korrekt umbenannt

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID

News Manager
- Bei den Teasern kann der neue Platzhalter [[TEASER_FULL_TEXT]] verwendet
  werden, um den kompletten Inhalt der News Meldungen auszugeben.
- Kommentarfunktion für Meldungen hinzugefügt.
- Wird in Home » News Manager » Einstellungen unter "Anzahl Headlines" 0 angegeben, werden auch keine HL angezeigt.
- Neues Verhalten: Einstellung < 1: keine Headlines. Einstellung > 50: 50 Headlines.
- Neuer Platzhalter HEADLINE_AUTHOR für Headlines.


Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.
- Kopierfunktion für Downloads.
- Die effektiven Zugriffsberechtigungen einer Benutzergruppe oder Benutzers
  können angezeigt werden.
- Neuer Platzhalter [[DOWNLOADS_FILE_MD5]] für die Ausgabe der MD5 Summe eines
  Downloads.
- Der Block "Verwandte Downloads" (downloads_related_file_list) unterstützt
  die gleichen Platzhalter wie bei der Detailseite eines Downloads.
- Für die Erfassung der Beschreibung eines Downloads oder Kategorie steht ein
  WYSIWYG-Editor zur Verfügung.
- Beim Hinzufügen eines Downloads kann ein Benachrichtigungs-E-Mail an
  ausgewählte Benutzergruppen versendet werden.